corrected overflow

--- a/src/AppComponents/table.css
+++ b/src/AppComponents/table.css
@@ -1,20 +1,26 @@
 table {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
+  
+  table-layout: fixed;
+
   width: 100%;
+
 }
 
 table td, table th {
   border-bottom: 1px solid #ddd;
   padding: 8px;
   font-size: 13px;
- width: 500px;
+  width: calc(100%/7);
+ max-width: 500px;
  font-family: 'Roboto', sans-serif;
  font-weight: 600;
+ overflow: hidden;
 }
 
 
-/*table tr:nth-child(even){background-color: #f2f2f2;}*/
+table tr:nth-child(even){background-color: #f2f2f2;}
 
 table tr:hover {background-color: #ddd;}
 
